feat: add pagination for /following and /follower
